--- a/12334-h/12334-h.htm
+++ b/12334-h/12334-h.htm
@@ -4694,7 +4694,7 @@ alt="'The Scene Vividly Recurred to My Mind'"><br />'The Scene Vividly Recurred 
     said? I could see that she did not wish that I should say anything,
     and now I knew the reason for it. It was all plain enough on her side.
     Even if she had allowed herself any sort of emotion regarding me, she
-    did not wish me to indulge in anything of the land. But as for myself.
+    did not wish me to indulge in anything of the kind. But as for myself.
     I could decide nothing about myself.
 </p>
 <p>
@@ -5283,7 +5283,7 @@ alt="'Do You Think You Could Hit It With an Apple?'"><br/>'Do You Think You Coul
     received the message through me.
 </p>
 <p>
-    "Well, she was very much affected, and it would have teen dreadful if
+    "Well, she was very much affected, and it would have been dreadful if
     you had gone. Oh the whole, however, I cannot help thinking that the
     Italian's letter was a great relief to her, particularly because she
     found that her husband had been killed by mistake. She said that one
@@ -5502,7 +5502,7 @@ alt="'Talking About Baby Bears'"><br />'Talking About Baby Bears'</a></center>
     I attended to her baggage, and offered to walk with her to her home
     and carry her little bag. I was about to leave her at the door, but
     this she positively forbade. I must step in for a minute or two to see
-    her mother and her aunt They had heard of me, and would never forgive
+    her mother and her aunt. They had heard of me, and would never forgive
     her if she let me go without their seeing me. As the door opened
     immediately, we went in.
 </p>
@@ -6276,7 +6276,7 @@ alt="'No, Sir,' She Said'"><br />'No, Sir,' She Said'</a></center>
     "And how about New-Year's Day?" I asked.
 </p>
 <p>
-    "That is the way to talk," skid she. "Keep your mind on that and you
+    "That is the way to talk," said she. "Keep your mind on that and you
     will be all right."
 </p>
 <p>
@@ -6479,7 +6479,7 @@ alt="'Cut Like That'"><br />'Cut Like That'</a></center>
     delighted to have me do so. She made a motion to open the gate for me,
     but I opened it for her, and we both went in. The daughter met us at
     the top of the garden walk. She came towards me as a cool summer
-    breeze comes upon a hot and dusty world. There was, no flush upon her
+    breeze comes upon a hot and dusty world. There was no flush upon her
     face, but her eyes and lips told me that she was glad to see me before
     she spoke a word or placed her soft, white hand in mine. At the first
     touch of that hand I felt glad that Mrs. Burton had stopped me in the
